--- a/src/css/adverisement.css
+++ b/src/css/adverisement.css
@@ -1,7 +1,4 @@
 /* advertisement */
-.advertisement{
-    padding-top: 40px ;
-}
 .paragraph{
     min-width: 355px;
 }
@@ -11,7 +8,6 @@
     border-radius: 12px;
     background: #576F35;
     padding: 3px 10px;
-
     color: #FBFBFB;
     font-size: 48px;
     font-style: normal;
@@ -19,7 +15,6 @@
     line-height: 1.04;
     letter-spacing: -0.72px;
     text-transform: uppercase;
-
     display: block;   
 }
 
@@ -30,13 +25,12 @@
     font-weight: 600;
     line-height: 1.04;
     letter-spacing: -0.72px;
-    text-transform: uppercase;  
+    text-transform: uppercase; 
+    padding-top: 80px;
+    padding-bottom: 80px; 
 }
 
 @media screen and (min-width:768px){
-    .advertisement{
-        padding-top: 50px;
-    }
     .advertisement-paragraph-part{
         height: 86px;
         padding: 8px 16px;
@@ -49,6 +43,8 @@
         font-size: 64px;
         line-height: 1.09;
         letter-spacing: -0.96px;
+        padding-top: 100px;
+        padding-bottom: 100px;
     }
 }
 
@@ -58,13 +54,15 @@
         line-height: 1.05;
         letter-spacing: -1.14px;
         padding-left: 13px;
-
         display: inline-block; 
+       
     }
 
       .advertisement-paragraph{
         font-size: 76px;
         line-height: 1.05;
         letter-spacing: -1.14px;
+        
+        
       }
 }
