adds from slesh

--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -14,7 +14,6 @@
                            name="username"
                            placeholder="Full Name"
                            pattern="[A-Za-z\s]{3,20}"
-                           autofocus
                            required >
                     </lable>
                     <lable>
@@ -30,16 +29,16 @@
                         <p class="text-invalid">Invalid email, try again</p>
                     <textarea class="user-message" 
                               name="user-comment" 
-                              placeholder="Comment">Comment</textarea>
+                              placeholder="Comment"></textarea>
                 </div>
                     <button class="contacts-btn" type="submit">Send</button>
             </form>
         </div>
         <div class="order-social">
             <picture>
-                <source srcset="/img/your-order/order-desktop.png 1x, /img/your-order/order-desktop@2x.png 2x" media (min-width: 1280px)>
-                <source srcset="/img/your-order/order-tablet.png 1x, /img/your-order/order-tablet@2x.png 2x" media (min-width: 768px)>
-                <source srcset="/img/your-order/order-mobile.png 1x, /img/your-order/order-mobile@2x.png 2x" media (max-width: 767px)>
+                <source srcset="/img/your-order/order-desktop.png 1x, /img/your-order/order-desktop@2x.png 2x" media ="(min-width: 1280px)">
+                <source srcset="/img/your-order/order-tablet.png 1x, /img/your-order/order-tablet@2x.png 2x" media="(min-width: 768px)">
+                <source srcset="/img/your-order/order-mobile.png 1x, /img/your-order/order-mobile@2x.png 2x" media="(max-width: 767px)">
                 <img class="order-social-pic" src="/img//your-order/order-mobile.png" alt="Make fresh fruit juice">
             </picture>
             <p class="social-text ">Follow us on our social networks:</p>
