--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -1,7 +1,5 @@
 .your-order {
     background-color: #7A3145;
-}
-.your-order-box {
     padding-top: 80px;
     padding-bottom: 80px;
 }
@@ -49,6 +47,22 @@
 .coments-text-second {
     color: #576f35;
 }
+.inp-wrapper {
+    margin-bottom: 25px;
+}
+.inp-wrapper-username,
+.inp-wrapper-email {
+    position: relative;
+    margin-bottom: 15px;
+}
+.inp-wrapper-username-text,
+.inp-wrapper-username-text,
+.inp-wrapper-email-text,
+.inp-wrapper-email-text {
+    position: absolute;
+    left: 16px;
+    bottom: 0;
+}
 .user-coments-field {
     border: 1px solid rgba(20, 20, 20, 0.2);
     border-radius: 30px;
@@ -56,7 +70,6 @@
     width: 100%;
     height: 46px;
     background-color: #fbfbfb;
-    margin-bottom: 15px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(.15,.8,.76,.28);
 }
@@ -115,6 +128,11 @@
     letter-spacing: -0.01em;
     text-transform: uppercase;
     color: #fbfbfb;
+    transition: background-color 250ms cubic-bezier(.15,.8,.76,.28);
+}
+.contacts-btn:hover,
+.contacts-btn:focus {
+    background-color: #384e19;  
 }
 .order-social {
     border-radius: 30px;
@@ -158,7 +176,7 @@
     letter-spacing: -0.01em;
 } 
 @media screen and (min-width: 768px) {
-    .your-order-box {
+    .your-order {
         padding-top: 100px;
         padding-bottom: 100px;
     }
@@ -186,7 +204,6 @@
         margin-bottom: 25px;
     }
     .user-coments-field {
-        padding: 16px;
         height: 52px;
     }
     .user-coments-field::placeholder,
