--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,21 +1,25 @@
 /* hero */
+
 .hero-section {
+    
     background-color: #576F35;
-    max-width: 375px;
+    max-width: 100%;
     background-image: url(../img/hero/hero-bg-mobile.jpg);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 375px, 370px;
     background-position: bottom;
-    padding-top: 100px;
-    padding-bottom: 370px;
+}
 
-    @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-            .opening {
-                background-image: url(../img/hero/hero-bg-mobile@2x.jpg)
-            }
-        }
+@media screen and (max-width: 375px) and (min-resolution: 192dpi) {
+    .hero-section {
+        background-image: url(../img/hero/hero-bg-mobile@2x.jpg)
+    }
+}
+
+.hero-container
+{
+    padding-top: 100px;
+    padding-bottom: 410px;
 }
 
 .hero-name {
@@ -37,59 +41,67 @@
     color: #fbfbfb;
 }
 
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .hero-section {
     background-image: url(../img/hero/hero-bg-tablet.jpg);
-    padding-top: 122px;
-    padding-bottom: 589px;
-    max-width: 768px;
-
-    @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-            .opening {
-                max-width: 786px;
-                background-image: url(../img/hero/hero-bg-tablet@2x.jpg)
-            }
-        }
+    background-size: 768px, 539px;
     }
- .hero-name {
-  max-width: 480px;
-  margin-bottom: 25px;
- }
 
- .hero-text {
-    max-width: 550px;
- }
+    .hero-container
+    {
+        padding-top: 122px;
+        padding-bottom: 589px;
+        width: 768px;
+    }
+
+    .hero-name
+    {
+        font-size: 76px;
+        max-width: 704px;
+        margin-bottom: 25px;
+    }
+
+    .hero-text
+    {
+        max-width: 603px;
+        line-height: 1.25;
+        font-size: 16px;
+    }
+}
+@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+    .hero-section {
+        background-image: url(../img/hero/hero-bg-tablet@2x.jpg)
+    }
 }
 
-@media only screen and (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
     .hero-section {
        background-image: url(../img/hero/hero-bg-desktop.jpg);
        background-position: right;
-       max-width: 100%;
-       height: 800px;
+       background-size: auto 100%;
+    }
 
-    @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-            .opening {
-                background-image: url(../img/hero/hero-bg-desktop@2x.jpg)
-            }
-        }
+    .hero-container
+    {
+        width: 1280px;
+        padding-top: 238px;
+        padding-bottom: 50px;
+    }
+
+    .hero-name
+    {
+        margin-bottom: 128px;
+        max-width: 502px;
+    }
+
+    .hero-text
+    {
+        max-width: 472px;
+    }
 }
 
-.hero-container {
-    padding-top: 154px;
-    }
-
-    .hero-name {
-        max-width: 304px;
-        max-height: 304px;
-        margin-bottom: 64px;
-    }
-    .hero-text {
-        max-width: 472px;
-        margin-top: 64px;
+@media screen and (min-width: 1280px) and (min-resolution: 192dpi) {
+    .hero-section {
+        background-image: url(../img/hero/hero-bg-desktop@2x.jpg)
     }
 }
