--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,13 @@
           </li>
         </ul>
       </nav>
-      <button class="header-button" type="button">Shop now</button>
+      <button
+        class="header-button"
+        type="button"
+        onclick="location.href='#shop-now'"
+      >
+        Shop now
+      </button>
       <button class="header-menu-button" data-menu-open type="button">
         <svg class="header-menu-img" width="32" height="32">
           <use href="/img/icons.svg#icon-open-btn"></use>
@@ -50,7 +56,13 @@
           </li>
         </ul>
       </nav>
-      <button class="mobile-menu-button" type="button">Shop now</button>
+      <button
+        class="mobile-menu-button"
+        type="button"
+        onclick="location.href='#shop-now'"
+      >
+        Shop now
+      </button>
     </div>
   </div>
 </header>
