--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,9 +31,14 @@
           <a href="tel:+380684439426" class="footer-contacts-tel">
             +380 (68) 443-94-26
           </a>
-          <p class="footer-contacts-address">
-            1678 S. Pioneer Road Salt Lake City UT 84104
-          </p>
+          <a
+            href="https://www.google.it/maps/place/Varex+Imaging+Visitor+Entrance/@40.7332093,-111.9617062,17z/data=!3m1!4b1!4m6!3m5!1s0x8752f35bbcfb1369:0x260ab4842496c9e4!8m2!3d40.7332053!4d-111.9591313!16s%2Fg%2F1tcxvqmt?entry=ttu&g_ep=EgoyMDI0MTAyMy4wIKXMDSoASAFQAw%3D%3D"
+            target="_blank"
+          >
+            <p class="footer-contacts-address">
+              1678 S. Pioneer Road Salt Lake City UT 84104
+            </p>
+          </a>
         </address>
       </div>
     </div>
