--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,4 +1,4 @@
-<section class="your-order">
+<section class="your-order" id="shop-now">
   <div class="container your-order-box">
     <div class="order-text-box">
       <h2 class="order-title">
